# dotfiles

./: .Xresources  .Xsessionrc  .bashrc  .gitconfig  .gitignore  .tmux.conf  .vale.ini
.config/alacritty/: alacritty.yml
.config/deluge/: core.conf
.config/ghostty/: config  dropdown_config  newsboat_config
.config/git/: allowed_signers
.config/i3/: config  i3status.conf
.config/nvim/: init.vim
.config/synth-shell/: synth-shell-greeter.config  synth-shell-greeter.sh  synth-shell-prompt.config
.newsboat/: config  urls
arch/: AURS  from_arch  modified
nvim_venv/: pyproject.toml
